--- a/app/views/bizs/update_measures.js.erb
+++ b/app/views/bizs/update_measures.js.erb
@@ -1,6 +1,6 @@
 
 $('.active').empty();
-$('.active').append( $('<option>Select the Measures</option>'));
+$('.active').append( $('<option>Select Measures</option>'));
 <% @msrs.each do |msr| %>
   $('.active').append($('<option value="<%= msr[0] %>"><%= msr[0] %></option>'));
 <% end %>
