--- a/app/views/bizs/add_new.html.erb
+++ b/app/views/bizs/add_new.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Biz</h1>
+<h1>New Biz</h1>
 
-<%= render 'edit_form' %>
+<%= render 'form_new' %>
 
 <%= link_to 'Show', @biz %> |
 <%= link_to 'Back', bizs_path %>
