--- a/app/views/bizs/index.html.erb
+++ b/app/views/bizs/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Fact</th>
-      <th>Dimension</th>
+      <th>Dimensions</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
     <% @bizs.each do |biz| %>
       <tr>
         <td><%= biz.fact %></td>
-        <td><%= biz.dimension %></td>
+        <td><%= biz.dimensions %></td>
         <td><%= link_to 'Show', biz %></td>
         <td><%= link_to 'Edit', edit_biz_path(biz) %></td>
         <td><%= link_to 'Destroy', biz, method: :delete, data: { confirm: 'Are you sure?' } %></td>
