--- a/app/views/bizs/_new_form.html.erb
+++ b/app/views/bizs/_new_form.html.erb
@@ -24,7 +24,11 @@
         <th></th>
       </thead>
       <tbody id="dimensions_measures">
-          <%= render 'dimensions' %>
+        <tr>
+          <td><%= select_tag "biz[dimensions_#{@count}]", options_for_select( @dimensions.each { |name| [name, name] } ), {prompt: "Select Dimensions", :class => 'dim_selection', :id => "biz_dimension#{@count}"} %></td>
+          <td><%= render 'measures' %></td>
+          <td><%= submit_tag "+Add", name: "add_dimension", class: 'add_more' -%></td>
+        </tr>
       </tbody>
     </table>
 
@@ -34,6 +38,4 @@
 <% end %>
 </div>
 
-<script language="javascript">
-  closeDivs();
-</script>
+
