--- a/app/views/bizs/show.html.erb
+++ b/app/views/bizs/show.html.erb
@@ -11,10 +11,10 @@
     <th>Measures</th>
   </thead>
   <tbody>
-  <% (0..@my_biz.size-1).each do |myb| -%>
+  <% (0..@biz.dimensions.size-1).each do |myb| -%>
   <tr>
     <td><%= @biz.dimensions[myb] %></td>
-    <td></td>
+    <td><%= @biz.measures[myb].tr('^a-z,',"").split(",").map(&:capitalize) %></td>
   </tr>
   <% end %>
   </tbody>
