replace cronjob with worker threads

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :sku %>
   </div>
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.label :product_type %><br>
+    <%= f.text_field :product_type %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
