--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= product.name %></td>
         <td><%= product.sku %></td>
-        <td><%= product.type %></td>
+        <td><%= product.product_type %></td>
         <td><%= product.price %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
