--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @product.type %>
+  <strong>Product Type:</strong>
+  <%= @product.product_type %>
 </p>
 
 <p>
