--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Account:</strong>
-  <%= @transaction_log.account.account_name %>
+  <%= @transaction_log.account.name %>
 </p>
 
 <p>
