--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :account_name %><br>
-    <%= f.text_field :account_name %>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
     <%= f.label :account_balance %><br>
